fixed images are not responsive

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ p {
 
 .slider__image {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     border-radius: 16px;
 }
